--- a/src/main/resources/templates/mily/common/footer.html
+++ b/src/main/resources/templates/mily/common/footer.html
@@ -42,7 +42,7 @@
 
         <!-- sns -->
         <div
-                class="foot_sns flex justify-center items-center text-2xl text-gray-300"
+                class="foot_sns flex justify-center items-center text-2xl text-gray-300 mt-9"
         >
             <a href="https://www.facebook.com/" class="mr-3"
             ><i class="fa-brands fa-facebook"></i
